@@ -307,6 +307,9 @@ AC_CONFIG_FILES([
     examples/book/combobox/Makefile
       examples/book/combobox/text/Makefile
       examples/book/combobox/complex/Makefile
+    examples/book/custom/Makefile
+      examples/book/custom/custom_container/Makefile
+      examples/book/custom/custom_widget/Makefile
     examples/book/dialogs/Makefile
         examples/book/dialogs/colorselectiondialog/Makefile
         examples/book/dialogs/filechooserdialog/Makefile        
