@@ -1,3 +1,3 @@
-SUBDIRS = custom_container
+SUBDIRS = custom_container custom_widget
 
 
