@@ -2,7 +2,7 @@ include $(top_srcdir)/examples/Makefile.am_fragment
 
 #Build the executable, but don't install it.
 noinst_PROGRAMS = example
-example_SOURCES = mycontainer.h mycontainer.cc examplewindow.h examplewindow.cc main.cc
+example_SOURCES = mywidget.h mywidget.cc examplewindow.h examplewindow.cc main.cc
 
 
 
