@@ -20,7 +20,7 @@
 #define GTKMM_EXAMPLEWINDOW_H
 
 #include <gtkmm.h>
-#include "mycontainer.h"
+#include "mywidget.h"
 
 class ExampleWindow : public Gtk::Window
 {
@@ -34,8 +34,7 @@ protected:
 
   //Child widgets:
   Gtk::VBox m_VBox;
-  MyContainer m_MyContainer;
-  Gtk::Button m_Button_One, m_Button_Two;
+  MyWidget m_MyWidget;
   Gtk::HButtonBox m_ButtonBox;
   Gtk::Button m_Button_Quit;
 };
