@@ -1,3 +1,8 @@
+2004-10-10  Murray Cumming  <murrayc@murrayc.com>
+
+	* docs/tutorial/gtkmm-tut.xml: Added Custom Widgets chapter, so far 
+	with a Custom Container section and example.
+
 2004-09-04 Jonathan Brandmeyer <jbrandmeyer@earthlink.net>
 
 	* gdk/src/screen.hg: get_default(): Take an extra reference so that
